// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LSP formatting > basic formatting > should handle format/formatted.ts 1`] = `
"--- URI -----------
file://<fixture>/format/formatted.ts
--- BEFORE ---------
const x = 1;

--- AFTER ----------
const x = 1;

--------------------"
`;

exports[`LSP formatting > basic formatting > should handle format/test.json 1`] = `
"--- URI -----------
file://<fixture>/format/test.json
--- BEFORE ---------
{"name":"test","version":"1.0.0"}

--- AFTER ----------
{ "name": "test", "version": "1.0.0" }

--------------------"
`;

exports[`LSP formatting > basic formatting > should handle format/test.toml 1`] = `
"--- URI -----------
file://<fixture>/format/test.toml
--- BEFORE ---------
[package]
name="test"
version="1.0.0"

--- AFTER ----------
[package]
name = "test"
version = "1.0.0"

--------------------"
`;

exports[`LSP formatting > basic formatting > should handle format/test.tsx 1`] = `
"--- URI -----------
file://<fixture>/format/test.tsx
--- BEFORE ---------
const   App:   React.FC   =   ()   =>   <div>Hello</div>

--- AFTER ----------
const App: React.FC = () => <div>Hello</div>;

--------------------"
`;

exports[`LSP formatting > basic formatting > should handle format/test.txt 1`] = `
"--- URI -----------
file://<fixture>/format/test.txt
--- BEFORE ---------
hello   world

--- AFTER ----------
hello   world

--------------------"
`;

exports[`LSP formatting > basic formatting > should handle format/test.vue 1`] = `
"--- URI -----------
file://<fixture>/format/test.vue
--- BEFORE ---------
<script>const   x   =   1;</script>

--- AFTER ----------
<script>
const x = 1;
</script>

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-js-semi/test.ts 1`] = `
"--- URI -----------
file://<fixture>/config-js-semi/test.ts
--- BEFORE ---------
const x = 1;

--- AFTER ----------
const x = 1

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-js-stdout-pollution/test.ts 1`] = `
"--- URI -----------
file://<fixture>/config-js-stdout-pollution/test.ts
--- BEFORE ---------
const x = 1;

--- AFTER ----------
const x = 1

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-no-sort-package-json/package.json 1`] = `
"--- URI -----------
file://<fixture>/config-no-sort-package-json/package.json
--- BEFORE ---------
{"version":"1.0.0","name":"test"}

--- AFTER ----------
{
  "version": "1.0.0",
  "name": "test"
}

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-semi/test.ts 1`] = `
"--- URI -----------
file://<fixture>/config-semi/test.ts
--- BEFORE ---------
const x = 1;

--- AFTER ----------
const x = 1

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-sort-both/test.jsx 1`] = `
"--- URI -----------
file://<fixture>/config-sort-both/test.jsx
--- BEFORE ---------
import { z } from "z";
import { a } from "a";

const App = () => <div className="p-4 flex m-2">Hello</div>;

--- AFTER ----------
import { a } from "a";
import { z } from "z";

const App = () => <div className="m-2 flex p-4">Hello</div>;

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-sort-imports/test.js 1`] = `
"--- URI -----------
file://<fixture>/config-sort-imports/test.js
--- BEFORE ---------
import { z } from "z";
import { a } from "a";

--- AFTER ----------
import { a } from "a";
import { z } from "z";

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-sort-tailwindcss/test.tsx 1`] = `
"--- URI -----------
file://<fixture>/config-sort-tailwindcss/test.tsx
--- BEFORE ---------
const App = () => <div className="p-4 flex m-2">Hello</div>;

--- AFTER ----------
const App = () => <div className="m-2 flex p-4">Hello</div>;

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-sort-tailwindcss/test.vue 1`] = `
"--- URI -----------
file://<fixture>/config-sort-tailwindcss/test.vue
--- BEFORE ---------
<template>
  <div class="p-4 flex m-2">Hello</div>
</template>

--- AFTER ----------
<template>
  <div class="m-2 flex p-4">Hello</div>
</template>

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-vite-semi/test.ts 1`] = `
"--- URI -----------
file://<fixture>/config-vite-semi/test.ts
--- BEFORE ---------
const x = 1;

--- AFTER ----------
const x = 1

--------------------"
`;

exports[`LSP formatting > config options > should apply config from config-vue-indent/test.vue 1`] = `
"--- URI -----------
file://<fixture>/config-vue-indent/test.vue
--- BEFORE ---------
<script>
const x = 1;
</script>

--- AFTER ----------
<script>
  const x = 1;
</script>

--------------------"
`;

exports[`LSP formatting > config options > should apply config from editorconfig/test.ts 1`] = `
"--- URI -----------
file://<fixture>/editorconfig/test.ts
--- BEFORE ---------
if (true) {
x = 1;
}

--- AFTER ----------
if (true) {
    x = 1;
}

--------------------"
`;

exports[`LSP formatting > config options in nested workspace folders > should respect nested oxfmt config with nested workspace folders nested-workspaces/test.ts 1`] = `
"--- URI -----------
file://<fixture>/nested-workspaces/test.ts
--- BEFORE ---------
// { "semi": true, "singleQuote": true }
const x = "1";

--- AFTER ----------
// { "semi": true, "singleQuote": true }
const x = '1';

--------------------"
`;

exports[`LSP formatting > config options in nested workspace folders > should respect nested oxfmt config with nested workspace folders nested-workspaces/test.ts 2`] = `
"--- URI -----------
file://<fixture>/nested-workspaces/second/test.ts
--- BEFORE ---------
// { "semi": true, "singleQuote": true }
const x = "1";

--- AFTER ----------
// { "semi": true, "singleQuote": true }
const x = '1';

--------------------"
`;

exports[`LSP formatting > config options in nested workspace folders > should respect nested oxfmt config with nested workspace folders nested-workspaces-with-config/test.ts 1`] = `
"--- URI -----------
file://<fixture>/nested-workspaces-with-config/test.ts
--- BEFORE ---------
// { "semi": true, "singleQuote": true }
const x = "1";

--- AFTER ----------
// { "semi": true, "singleQuote": true }
const x = '1';

--------------------"
`;

exports[`LSP formatting > config options in nested workspace folders > should respect nested oxfmt config with nested workspace folders nested-workspaces-with-config/test.ts 2`] = `
"--- URI -----------
file://<fixture>/nested-workspaces-with-config/second/test.ts
--- BEFORE ---------
// { "semi": false, "singleQuote": false }
const x = "1";

--- AFTER ----------
// { "semi": false, "singleQuote": false }
const x = "1"

--------------------"
`;

exports[`LSP formatting > ignore patterns > should handle ignore-config/file.generated.ts 1`] = `
"--- URI -----------
file://<fixture>/ignore-config/file.generated.ts
--- BEFORE ---------
const   x   =   1

--- AFTER ----------
const   x   =   1

--------------------"
`;

exports[`LSP formatting > ignore patterns > should handle ignore-prettierignore/ignored.ts 1`] = `
"--- URI -----------
file://<fixture>/ignore-prettierignore/ignored.ts
--- BEFORE ---------
const   x   =   1

--- AFTER ----------
const   x   =   1

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri untitled://Untitled-1 1`] = `
"--- URI -----------
untitled://Untitled-1
--- BEFORE ---------
const   App:   React.FC   =   ()   =>   <div>Hello</div>

--- AFTER ----------
const App: React.FC = () => <div>Hello</div>;

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri untitled://Untitled-2 1`] = `
"--- URI -----------
untitled://Untitled-2
--- BEFORE ---------
{"name":"test","version":"1.0.0"}

--- AFTER ----------
{ "name": "test", "version": "1.0.0" }

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri untitled://Untitled-3 1`] = `
"--- URI -----------
untitled://Untitled-3
--- BEFORE ---------
<script>const   x   =   1;</script>

--- AFTER ----------
<script>
const x = 1;
</script>

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri untitled://Untitled-4 1`] = `
"--- URI -----------
untitled://Untitled-4
--- BEFORE ---------
[package]
name="test"
version="1.0.0"

--- AFTER ----------
[package]
name = "test"
version = "1.0.0"

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri untitled://Untitled-5 1`] = `
"--- URI -----------
untitled://Untitled-5
--- BEFORE ---------
const x = 1;

--- AFTER ----------
const x = 1;

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri untitled://Untitled-6 1`] = `
"--- URI -----------
untitled://Untitled-6
--- BEFORE ---------
hello   world

--- AFTER ----------
hello   world

--------------------"
`;

exports[`LSP formatting > in-memory document > should format uri vscode-userdata:/c%3A/Users/User/settings.json 1`] = `
"--- URI -----------
vscode-userdata:/c%3A/Users/User/settings.json
--- BEFORE ---------
const   App:   React.FC   =   ()   =>   <div>Hello</div>

--- AFTER ----------
const App: React.FC = () => <div>Hello</div>;

--------------------"
`;

exports[`LSP formatting > initializationOptions > should use custom JS/TS config path from fmt.configPath 1`] = `
"--- URI -----------
file://<fixture>/custom_config_path_js/semicolons-as-needed.ts
--- BEFORE ---------
// semicolon is on character 8-9, which will be removed
debugger;

--- AFTER ----------
// semicolon is on character 8-9, which will be removed
debugger

--------------------"
`;

exports[`LSP formatting > initializationOptions > should use custom config path from fmt.configPath 1`] = `
"--- URI -----------
file://<fixture>/custom_config_path/semicolons-as-needed.ts
--- BEFORE ---------
// semicolon is on character 8-9, which will be removed
debugger;

--- AFTER ----------
// semicolon is on character 8-9, which will be removed
debugger

--------------------"
`;
